Update and rename Untitled.ipynb to autoLiker.ipynb

--- a/autoLiker.ipynb
+++ b/autoLiker.ipynb
@@ -70,9 +70,9 @@
    "source": [
     "\n",
     "# email = driver.find_element_by_xpath(\"//input[@name='username']\")\n",
-    "# email.send_keys('sudhanshudekate')\n",
+    "# email.send_keys('Enter Username Here')\n",
     "# password = driver.find_element_by_xpath(\"//input[@name='password']\")\n",
-    "# password.send_keys('1029384756')\n",
+    "# password.send_keys('Enter password Here')\n",
     "# login = driver.find_element_by_xpath(\"//button[@class='sqdOP  L3NKy   y3zKF     ']\")\n",
     "# login.click()"
    ]
@@ -183,9 +183,9 @@
     "import time\n",
     "from selenium.webdriver.common.keys import Keys\n",
     " \n",
-    "username = \"sudhanshudekate\"\n",
+    "username = \"Enter Username Here\"\n",
     "\n",
-    "password = \"1029384756\"\n",
+    "password = \"Enter Username Here\"\n",
     " \n",
     "url = \"https://www.instagram.com/\""
    ]
